--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom --watchAll",
+    "testci": "set CI=true &&react-scripts test --env=jsdom",
     "coverage": "react-scripts test --env=jsdom --watchAll --coverage",
     "eject": "react-scripts eject"
   },
