--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom --watchAll",
-    "testci": "set CI=true &&react-scripts test --env=jsdom",
+    "testdev": "react-scripts test --env=jsdom --watchAll",
+    "test": "set CI=true &&react-scripts test --env=jsdom",
     "coverage": "react-scripts test --env=jsdom --watchAll --coverage",
     "eject": "react-scripts eject"
   },
